Fix "Homepage" : slider arrows + insta feed align

--- a/web/sites/sitram/themes/sitram/less/style.less
+++ b/web/sites/sitram/themes/sitram/less/style.less
@@ -235,7 +235,7 @@
     margin: 0 auto;
 
     .slick-next {
-      right: 260px;
+      right: 50px;
 
       @media @tablet {
         right: 30px;
@@ -243,7 +243,7 @@
     }
 
     .slick-prev {
-      left: 260px;
+      left: 50px;
 
       @media @tablet {
         left: 30px;
